@@ -13,26 +13,27 @@ Additionally, gcalcli can be used as a reminder service and execute any
 application you want when an event is coming up.
 .SH USAGE
 
-gcalcli [-h]
-        [--version] [--default-calendar DEFAULT_CALENDAR]
-        [--calendar CALENDAR] [--refresh] [--client-id CLIENT_ID]
-        [--conky] [--nocache] [--locale LOCALE] [--noincluderc]
-        [--lineart {fancy,unicode,ascii}]
-        [--config-folder CONFIG_FOLDER] [--nocolor]
-        [--client-secret CLIENT_SECRET]
-        {list,search,edit,delete,agenda,calw,calm,quick,add,import,remind}
-         ...
+usage: gcalcli [-h] [--version] [--client-id CLIENT_ID] [--client-secret CLIENT_SECRET]
+               [--noauth_local_server] [--config-folder CONFIG_FOLDER] [--noincluderc]
+               [--calendar CALENDAR] [--default-calendar DEFAULTCALENDAR] [--locale LOCALE] [--refresh]
+               [--nocache] [--conky] [--nocolor] [--lineart {fancy,unicode,ascii}]
+               {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind}
+               ...
 
+Google Calendar Command Line Interface
 
-Positional arguments:
-  {list,search,edit,delete,agenda,updates,conflicts,calw,calm,quick,add,import,remind}
-                        Invoking a subcommand with --help prints subcommand
-                        usage.
+positional arguments:
+  {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind}
+                        Invoking a subcommand with --help prints subcommand usage.
     list                list available calendars
+    search              search for events within an optional time period
     edit                edit calendar events
+    delete              delete events from the calendar
     agenda              get an agenda for a time period
-    updates             get updates since a datetime for a time period
-    conflicts		find conflicts between events matching search term
+    agendaupdate        update calendar from agenda TSV file
+    updates             get updates since a datetime for a time period (defaults to through end of current
+                        month)
+    conflicts           find event conflicts
     calw                get a week-based agenda in calendar format
     calm                get a month agenda in calendar format
     quick               quick-add an event to a calendar
@@ -40,33 +41,37 @@ Positional arguments:
     import              import an ics/vcal file to a calendar
     remind              execute command if event occurs within <mins> time
 
-Optional arguments:
+options:
   -h, --help            show this help message and exit
   --version             show program's version number and exit
-  --default-calendar DEFAULT_CALENDAR
-                        Optional default calendar to use if no --calendar
-                        options are given (default: [])
-  --calendar CALENDAR   Which calendars to use (default: [])
-  --refresh             Delete and refresh cached data (default: False)
   --client-id CLIENT_ID
                         API client_id (default:
                         232867676714.apps.googleusercontent.com)
-  --conky               Use Conky color codes (default: False)
-  --nocache             Execute command without using cache (default: True)
-  --locale LOCALE       System locale (default: )
+  --client-secret CLIENT_SECRET
+                        API client_secret (default: 3tZSxItw6_VnZMezQwC8lUqy)
+  --noauth_local_server
+                        Provide instructions for authenticating from a remote system using port
+                        forwarding. Note: Previously this option invoked an "Out-Of-Band" variant of the
+                        auth flow, but that deprecated mechanism is no longer supported. (default: True)
+  --config-folder CONFIG_FOLDER
+                        Optional directory to load/store all configuration
+                        information (default: None)
   --noincluderc         Whether to include ~/.gcalclirc when using
                         configFolder (default: True)
+  --calendar CALENDAR   Which calendars to use (default: [])
+  --default-calendar DEFAULT_CALENDAR
+                        Optional default calendar to use if no --calendar
+                        options are given (default: [])
+  --locale LOCALE       System locale (default: )
+  --refresh             Delete and refresh cached data (default: False)
+  --conky               Use Conky color codes (default: False)
+  --nocache             Execute command without using cache (default: True)
   --lineart {fancy,unicode,ascii}
                         Choose line art style for calendars: "fancy": for
                         VTcodes, "unicode" for Unicode box drawing characters,
                         "ascii" for old-school plusses, hyphens and pipes.
                         (default: fancy)
-  --config-folder CONFIG_FOLDER
-                        Optional directory to load/store all configuration
-                        information (default: None)
   --nocolor             Enable/Disable all color output (default: True)
-  --client-secret CLIENT_SECRET
-                        API client_secret (default: 3tZSxItw6_VnZMezQwC8lUqy)
 
 
 .SH DIAGNOSTICS
