@@ -3,9 +3,12 @@ import socket
 from google.auth.transport.requests import Request
 from google_auth_oauthlib.flow import InstalledAppFlow
 from google.oauth2.credentials import Credentials
+from gcalcli.printer import Printer
 
 
-def authenticate(client_id: str, client_secret: str):
+def authenticate(
+    client_id: str, client_secret: str, printer: Printer, local: bool
+):
     flow = InstalledAppFlow.from_client_config(
         client_config={
             "installed": {
@@ -19,16 +22,38 @@ def authenticate(client_id: str, client_secret: str):
         },
         scopes=["https://www.googleapis.com/auth/calendar"],
     )
+    if not local:
+        printer.msg(
+            'Note: Behavior of the `--noauth-local-server` option has changed! '
+            'Starting local server, but providing instructions for connecting '
+            'to it remotely...\n'
+        )
     credentials = None
     attempt_num = 0
     # Retry up to 5 attempts with different random ports.
     while credentials is None:
         port = _free_local_port()
+        if not local:
+            printer.msg('Option 1 (outbound):\n', 'yellow')
+            printer.msg(
+                '  To establish a connection from this system to a remote '
+                'host, execute a command like: `ssh username@host -L '
+                f'{port}:localhost:{port} BROWSER=open $BROWSER '
+                "'https://the-url-below'`\n",
+            )
+            printer.msg('Option 2 (outbound):\n', 'yellow')
+            printer.msg(
+                '  To establish a connection from a remote host to this '
+                'system, execute a command from remote host like: '
+                f'`ssh username@host -fN -R {port}:localhost:{port} ; '
+                "BROWSER=open $BROWSER https://the-url-below'`\n\n",
+            )
         try:
             credentials = flow.run_local_server(open_browser=False, port=port)
         except OSError as e:
             if e.errno == 98 and attempt_num < 4:
                 # Will get retried with a different port.
+                printer.msg(f'Port {port} in use, trying another port...')
                 attempt_num += 1
             else:
                 raise
