@@ -1,6 +1,9 @@
 v4.5.0
   * Drop support for python <3.10
   * Respect locally-installed certificates (ajkessel)
+  * Re-add a `--noauth_local_server` to provide instructions for authenticating
+    from a remote system using port forwarding
+
 v4.4.0
   * Fix lots of bugs by switching from deprecated oauth2client to
     google_auth_oauthlib
